# Http

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yaml  conanfile.txt  package-lock.cmake
.github/workflows/: coverage.yml  tests.yml
include/Http/: HttpAuth.hpp  HttpBody.hpp  HttpClient.hpp  HttpFormData.hpp  HttpForwards.hpp  HttpMimeTypes.hpp  HttpOptions.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpTypes.hpp
include/Http/detail/: Base64.hpp  HttpClientImpl.h  HttpClientImpl.hpp  HttpFile.hpp  HttpISession.hpp  HttpRequestImpl.h  HttpRequestImpl.hpp  HttpSessionBase.h  HttpSessionBase.hpp  HttpSessionPlain.hpp  HttpSessionSsl.hpp  basic_file_body.hpp  basic_multipart_body.hpp  basic_string_body.hpp  empty_body.hpp
src/: EchoServer.hpp  TestServer.hpp  example.cpp
tests/: CMakeLists.txt  EchoServer.hpp  main.cpp
